--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>shiro-test</module>
+        <module>shiro-web</module>
+        <module>shiro-web</module>
+        <module>shiro-web</module>
+        <module>shiro-web</module>
+        <module>shiro-web</module>
     </modules>
 
 
